# Personal-AI-Agent-for-GMail-and-Calendar-Assistant

./: .gitignore  README.md
backend/: action.py  agent.py  calendar_client.py  decision.py  generate_token.py  gmail_client.py  mcp_tools.py  memory.py  perception.py  pyproject.toml  rag.py  server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatInput.jsx  ChatWindow.jsx  ContextPanel.jsx  EmailCard.jsx  EventCard.jsx  FreeSlotTimeline.jsx  QuickActions.jsx
